<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proton_ros2</name>
  <version>0.1.1</version>
  <description>Proton ROS 2 integration package</description>
  <maintainer email="rkreinin@clearpathrobotics.com">rkreinin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>proton_vendor</depend>

  <depend>rclcpp</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>rosidl_parser</depend>
  <depend>diagnostic_updater</depend>

  <depend>clearpath_platform_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
